package main

import (
	"crypto/ecdsa"
	"crypto/elliptic"
	cryptorand "crypto/rand"
	"crypto/tls"
	"crypto/x509"
	"dex/consensus"
	"dex/logs"
	"dex/pb"
	"dex/stats"
	"dex/types"
	"encoding/pem"
	"fmt"
	"math/big"
	mathrand "math/rand"
	"net/http"
	"os"
	"os/signal"
	"runtime"
	"sync"
	"syscall"
	"time"

	"sort"
	"strings"

	"github.com/quic-go/quic-go/http3"
	"google.golang.org/protobuf/proto"
)

// æ¯ä¸ªèŠ‚ç‚¹çš„ API ç»Ÿè®¡
var (
	nodeStatsMap   = make(map[types.NodeID]*stats.Stats)
	nodeStatsMapMu sync.RWMutex
)

// APICallStats æ¥å£è°ƒç”¨ç»Ÿè®¡ç»“æ„ä½“
type APICallStats struct {
	sync.RWMutex
	// è®°å½•æ¯ä¸ªæ¥å£çš„ç´¯è®¡è°ƒç”¨æ¬¡æ•°
	CallCounts map[string]uint64
}

// å…¨å±€æ¥å£è°ƒç”¨ç»Ÿè®¡
var globalAPIStats = &APICallStats{
	CallCounts: make(map[string]uint64),
}

// getOrCreateNodeStats è·å–æˆ–åˆ›å»ºèŠ‚ç‚¹çš„ç»Ÿè®¡å®ä¾‹
func getOrCreateNodeStats(nodeID types.NodeID) *stats.Stats {
	nodeStatsMapMu.RLock()
	s, ok := nodeStatsMap[nodeID]
	nodeStatsMapMu.RUnlock()
	if ok {
		return s
	}

	nodeStatsMapMu.Lock()
	defer nodeStatsMapMu.Unlock()
	// double check
	if s, ok = nodeStatsMap[nodeID]; ok {
		return s
	}
	s = stats.NewStats()
	nodeStatsMap[nodeID] = s
	return s
}

func main() {
	mathrand.Seed(time.Now().UnixNano())

	config := consensus.DefaultConfig()
	config.Consensus.NumHeights = 50
	config.Consensus.BlocksPerHeight = 5

	fmt.Println("Starting Enhanced Simulated Consensus with HTTP/3 Web Monitor...")

	network := consensus.NewNetworkManager(config)
	network.CreateNodes()

	// ä¸ºæ¯ä¸ªèŠ‚ç‚¹å¯åŠ¨ HTTP/3 æœåŠ¡å™¨
	nodes := network.GetNodes()
	for id, node := range nodes {
		port := 6000 + int(id.Last2Mod100())
		// æ³¨å†Œæ˜ å°„ï¼Œæ–¹ä¾¿ Explorer é€šè¿‡ host:port æ‰¾åˆ° NodeID è¿›è€Œæ‰¾åˆ°å†…å­˜æ—¥å¿—
		logs.RegisterNodeMapping(fmt.Sprintf("127.0.0.1:%d", port), string(node.ID))
		logs.RegisterNodeMapping(string(node.ID), string(node.ID))

		go startNodeWeb(node, port)
	}

	programStart := time.Now()
	network.Start()

	// å¯åŠ¨ API ç»Ÿè®¡ç›‘æ§
	go monitorMetrics(network)

	// ç›‘æ§æ¨¡æ‹Ÿè¿›åº¦
	go func() {
		ticker := time.NewTicker(2 * time.Second)
		defer ticker.Stop()
		lastHeight := uint64(0)
		for range ticker.C {
			minHeight, allDone := network.CheckProgress()
			if minHeight > lastHeight {
				fmt.Printf("\nâœ… All honest nodes reached consensus on height %d\n", minHeight)
				lastHeight = minHeight
			}
			if allDone {
				totalTime := time.Since(programStart)
				fmt.Printf("\nğŸ‰ All heights completed! Total time: %v\n", totalTime)
				fmt.Println("Keep running to allow Web Monitor access...")
				network.PrintStatus()
				network.PrintFinalResults()
				return
			}
		}
	}()

	// ç­‰å¾…é€€å‡ºä¿¡å·ï¼Œä¸è¦å®Œæˆæ¨¡æ‹Ÿå°±é€€å‡ºï¼Œå¦åˆ™ç½‘é¡µä¼š timeout
	sigChan := make(chan os.Signal, 1)
	signal.Notify(sigChan, syscall.SIGINT, syscall.SIGTERM)
	<-sigChan
	fmt.Println("\nğŸ›‘ Shutting down...")
}

func startNodeWeb(node *consensus.Node, port int) {
	mux := http.NewServeMux()

	// è·å–è¯¥èŠ‚ç‚¹çš„ç»Ÿè®¡å®ä¾‹
	nodeStats := getOrCreateNodeStats(node.ID)

	// 1. çŠ¶æ€æ¥å£
	mux.HandleFunc("/status", func(w http.ResponseWriter, r *http.Request) {
		nodeStats.RecordAPICall("HandleStatus")
		blockID, height := node.GetLastAccepted()
		resProto := &pb.StatusResponse{
			Status: "ok",
			Info:   fmt.Sprintf("Simulated Node %s (Height: %d, Block: %s)", node.ID, height, blockID),
		}
		sendProto(w, resProto)
	})

	// 2. é«˜åº¦æ¥å£ (Explorer å¼ºä¾èµ–ä¸”ä¼šå¾ªç¯è°ƒç”¨)
	mux.HandleFunc("/heightquery", func(w http.ResponseWriter, r *http.Request) {
		nodeStats.RecordAPICall("HandleHeightQuery")
		_, height := node.GetLastAccepted()
		resProto := &pb.HeightResponse{
			CurrentHeight:      height,
			LastAcceptedHeight: height,
			Address:            string(node.ID),
		}
		sendProto(w, resProto)
	})

	// 3. è·å–åŒºå—è¯¦æƒ… (è¯¦æƒ…é¡µä¾èµ–)
	mux.HandleFunc("/getblock", func(w http.ResponseWriter, r *http.Request) {
		nodeStats.RecordAPICall("HandleGetBlock")
		blockID, height := node.GetLastAccepted()
		miner := string(node.ID)

		// å°è¯•ä» Store è·å–çœŸå®åŒºå—ä»¥æå–çœŸå®çš„ Proposer (Miner)
		if b, ok := node.GetBlock(blockID); ok {
			miner = b.Proposer
		}

		resProto := &pb.GetBlockResponse{
			Block: &pb.Block{
				Height:    height,
				BlockHash: blockID,
				Miner:     miner,
			},
		}
		sendProto(w, resProto)
	})

	// 4. è·å–æœ€è¿‘åŒºå—
	mux.HandleFunc("/getrecentblocks", func(w http.ResponseWriter, r *http.Request) {
		nodeStats.RecordAPICall("HandleGetRecentBlocks")
		blockID, height := node.GetLastAccepted()
		miner := string(node.ID)

		if b, ok := node.GetBlock(blockID); ok {
			miner = b.Proposer
		}

		resProto := &pb.GetRecentBlocksResponse{
			Blocks: []*pb.BlockHeader{
				{
					Height:  height,
					Miner:   miner,
					TxCount: 0,
				},
			},
		}
		sendProto(w, resProto)
	})

	// 5. æ—¥å¿—æ¥å£
	mux.HandleFunc("/logs", func(w http.ResponseWriter, r *http.Request) {
		nodeStats.RecordAPICall("HandleLogs")
		logLines := logs.GetLogsForNode(string(node.ID))
		resp := &pb.LogsResponse{
			Logs: logLines,
		}
		sendProto(w, resp)
	})

	// 6. Metrics æ¥å£ï¼ˆçœŸå®ç»Ÿè®¡æ•°æ®ï¼‰
	mux.HandleFunc("/frost/metrics", func(w http.ResponseWriter, r *http.Request) {
		nodeStats.RecordAPICall("GetMetrics")

		var m runtime.MemStats
		runtime.ReadMemStats(&m)

		// è·å– HTTP API è°ƒç”¨ç»Ÿè®¡
		apiStats := nodeStats.GetAPICallStats()

		// åˆå¹¶å…±è¯†æ¶ˆæ¯å¤„ç†ç»Ÿè®¡ï¼ˆPushQuery, PullQuery, Chits, Gossip ç­‰ï¼‰
		msgStats := node.GetMessageStats()
		for k, v := range msgStats {
			apiStats[k] = v
		}

		resp := &pb.MetricsResponse{
			HeapAlloc:      m.HeapAlloc,
			HeapSys:        m.HeapSys,
			NumGoroutine:   int32(runtime.NumGoroutine()),
			FrostJobs:      0,
			FrostWithdraws: 0,
			ApiCallStats:   apiStats,
		}
		sendProto(w, resp)
	})

	addr := fmt.Sprintf(":%d", port)

	// è®¾ç½® HTTP/3 æœåŠ¡å™¨ (Explorer å¿…é¡» HTTPS + HTTP/3)
	certFile := fmt.Sprintf("sim_node_%s.crt", node.ID)
	keyFile := fmt.Sprintf("sim_node_%s.key", node.ID)
	generateSelfSignedCert(certFile, keyFile)
	defer os.Remove(certFile)
	defer os.Remove(keyFile)

	tlsConfig := &tls.Config{
		MinVersion: tls.VersionTLS13,
		NextProtos: []string{"h3", "h3-29", "h3-28", "h3-27"},
	}
	cert, err := tls.LoadX509KeyPair(certFile, keyFile)
	if err != nil {
		fmt.Printf("âŒ Node %s: Failed to load TLS cert: %v\n", node.ID, err)
		return
	}
	tlsConfig.Certificates = []tls.Certificate{cert}

	server := &http3.Server{
		Addr:      addr,
		Handler:   mux,
		TLSConfig: tlsConfig,
	}

	fmt.Printf("ğŸ“¡ Node %s Web Monitor (HTTP/3): https://127.0.0.1%s\n", node.ID, addr)
	if err := server.ListenAndServe(); err != nil {
		fmt.Printf("âŒ Node %s: Web server failed: %v\n", node.ID, err)
	}
}

// monitorMetrics å®šæœŸç›‘æ§å„ä¸ªèŠ‚ç‚¹çš„ API å’Œå…±è¯†æ¶ˆæ¯è°ƒç”¨æƒ…å†µ
func monitorMetrics(network *consensus.NetworkManager) {
	ticker := time.NewTicker(20 * time.Second)
	defer ticker.Stop()

	// ç”¨äºè®°å½•æ¯ä¸ªèŠ‚ç‚¹ä¸Šæ¬¡çš„è°ƒç”¨æ¬¡æ•°ï¼Œè®¡ç®—æ•´ä¸ªå‘¨æœŸçš„å¢é‡
	lastCallCounts := make(map[types.NodeID]map[string]uint64)

	for range ticker.C {
		// ä¸´æ—¶å­˜å‚¨å½“å‰å‘¨æœŸçš„ç»Ÿè®¡æ•°æ®
		currentStats := make(map[string]uint64)
		nodes := network.GetNodes()

		for nodeID, node := range nodes {
			if node == nil {
				continue
			}

			// 1. è·å– HTTP API è°ƒç”¨ç»Ÿè®¡
			nodeStats := getOrCreateNodeStats(nodeID)
			apiStats := nodeStats.GetAPICallStats()

			// 2. åˆå¹¶å…±è¯†æ¶ˆæ¯å¤„ç†ç»Ÿè®¡
			msgStats := node.GetMessageStats()
			for k, v := range msgStats {
				apiStats[k] = v
			}

			// 3. è®¡ç®—å¢é‡
			if lastCallCounts[nodeID] == nil {
				lastCallCounts[nodeID] = make(map[string]uint64)
			}

			for apiName, currentCount := range apiStats {
				delta := currentCount
				if lastCount, exists := lastCallCounts[nodeID][apiName]; exists {
					delta = currentCount - lastCount
				}

				// æ›´æ–°å…¨å±€å½“å‰å‘¨æœŸçš„å¢é‡ç»Ÿè®¡
				currentStats[apiName] += delta

				// æ›´æ–°è¿™ä¸ªèŠ‚ç‚¹çš„ä¸Šæ¬¡è®°å½•
				lastCallCounts[nodeID][apiName] = currentCount
			}
		}

		// æ›´æ–°å…¨å±€ç´¯è®¡ API è°ƒç”¨ç»Ÿè®¡
		globalAPIStats.Lock()
		for apiName, delta := range currentStats {
			globalAPIStats.CallCounts[apiName] += delta
		}
		globalAPIStats.Unlock()

		printAPICallStatistics()
	}
}

// printAPICallStatistics æ‰“å° API è°ƒç”¨ç»Ÿè®¡
func printAPICallStatistics() {
	globalAPIStats.RLock()
	defer globalAPIStats.RUnlock()

	if len(globalAPIStats.CallCounts) == 0 {
		return
	}

	fmt.Println("\n========== Consensus / API Call Statistics ==========")
	fmt.Println("Global Call Counts (Total):")

	// æŒ‰æ¥å£åç§°æ’åº
	var apiNames []string
	for apiName := range globalAPIStats.CallCounts {
		apiNames = append(apiNames, apiName)
	}
	sort.Strings(apiNames)

	// æ‰“å°å…¨å±€ç»Ÿè®¡
	totalCalls := uint64(0)
	for _, apiName := range apiNames {
		count := globalAPIStats.CallCounts[apiName]
		totalCalls += count
		fmt.Printf("  %-30s: %10d calls\n", apiName, count)
	}
	fmt.Printf("  %-30s: %d calls\n", "TOTAL", totalCalls)

	// æ‰“å°åˆ†æ
	fmt.Println("\nCall Frequency Analysis:")
	if totalCalls > 0 {
		for _, apiName := range apiNames {
			count := globalAPIStats.CallCounts[apiName]
			percentage := float64(count) * 100.0 / float64(totalCalls)

			// æ¡å½¢å›¾å±•ç¤º
			barLength := int(percentage / 2)
			if barLength > 40 {
				barLength = 40
			}
			bar := strings.Repeat("â–ˆ", barLength)

			fmt.Printf("  %-25s: %6.2f%% %s\n", apiName, percentage, bar)
		}
	}

	fmt.Println("=====================================================")
}

func sendProto(w http.ResponseWriter, msg proto.Message) {
	data, _ := proto.Marshal(msg)
	w.Header().Set("Content-Type", "application/x-protobuf")
	w.Write(data)
}

func generateSelfSignedCert(certFile, keyFile string) error {
	priv, _ := ecdsa.GenerateKey(elliptic.P256(), cryptorand.Reader)
	template := x509.Certificate{
		SerialNumber: big.NewInt(1),
		DNSNames:     []string{"localhost"},
	}
	certDER, _ := x509.CreateCertificate(cryptorand.Reader, &template, &template, &priv.PublicKey, priv)

	cOut, _ := os.Create(certFile)
	defer cOut.Close()
	pem.Encode(cOut, &pem.Block{Type: "CERTIFICATE", Bytes: certDER})

	kOut, _ := os.Create(keyFile)
	defer kOut.Close()
	privBytes, _ := x509.MarshalECPrivateKey(priv)
	pem.Encode(kOut, &pem.Block{Type: "EC PRIVATE KEY", Bytes: privBytes})
	return nil
}
