package vm

import (
	"dex/db"
	"dex/keys"
	"dex/logs"
	"dex/pb"
	"fmt"
	"strings"
	"testing"
	"time"

	"github.com/cockroachdb/pebble"
	"github.com/stretchr/testify/assert"
	"github.com/stretchr/testify/require"
	"google.golang.org/protobuf/proto"
)

// TestLightNode_RebuildOrderIndexFromStateDB
// é›†æˆæµ‹è¯•ï¼šéªŒè¯è½»èŠ‚ç‚¹ä»Ž StateDB åŒæ­¥åŽèƒ½å¤Ÿé‡å»ºè®¢å•ç´¢å¼•
//
// æµ‹è¯•åœºæ™¯ï¼š
// 1. å…¨èŠ‚ç‚¹ï¼šåˆ›å»ºè®¢å•æ•°æ®å’Œç´¢å¼•ï¼ŒåŒæ­¥åˆ° StateDB
// 2. è½»èŠ‚ç‚¹ï¼šåªä»Ž StateDB åŒæ­¥è®¢å•æ•°æ®ï¼ˆä¸åŒ…å«ç´¢å¼•ï¼‰
// 3. è½»èŠ‚ç‚¹ï¼šä»Žè®¢å•æ•°æ®é‡å»ºä»·æ ¼ç´¢å¼•
// 4. éªŒè¯ï¼šé‡å»ºçš„ç´¢å¼•ä¸Žå…¨èŠ‚ç‚¹ä¸€è‡´
func TestLightNode_RebuildOrderIndexFromStateDB(t *testing.T) {
	t.Log("ðŸš€ ========== è½»èŠ‚ç‚¹ç´¢å¼•é‡å»ºé›†æˆæµ‹è¯• ==========")

	// ========== ç¬¬ä¸€æ­¥ï¼šå…¨èŠ‚ç‚¹åˆ›å»ºæ•°æ® ==========
	t.Log("ðŸ“¦ Step 1: Full node creates orders and indexes")

	fullNodeDir := t.TempDir()
	fullNodeDB, err := db.NewManager(fullNodeDir, logs.NewNodeLogger("test", 0))
	require.NoError(t, err, "Failed to create full node DB")
	defer fullNodeDB.Close()

	fullNodeDB.InitWriteQueue(10000, 200*time.Millisecond)

	// åˆå§‹åŒ– VM
	registry := NewHandlerRegistry()
	require.NoError(t, RegisterDefaultHandlers(registry))
	cache := NewSpecExecLRU(100)
	executor := NewExecutor(fullNodeDB, registry, cache)

	// åˆ›å»ºæµ‹è¯•è´¦æˆ·
	aliceAddr := "alice_fullnode"
	bobAddr := "bob_fullnode"

	// åˆå§‹åŒ–è´¦æˆ·ä½™é¢
	createTestAccount(t, fullNodeDB, aliceAddr, map[string]string{
		"BTC":  "10",
		"USDT": "100000",
	})
	createTestAccount(t, fullNodeDB, bobAddr, map[string]string{
		"ETH":  "50",
		"USDT": "200000",
	})

	require.NoError(t, fullNodeDB.ForceFlush())
	time.Sleep(300 * time.Millisecond)

	// åˆ›å»ºè®¢å•äº¤æ˜“
	testOrders := []struct {
		from       string
		baseToken  string
		quoteToken string
		price      string
		amount     string
		side       pb.OrderSide
	}{
		{aliceAddr, "BTC", "USDT", "50000", "1", pb.OrderSide_SELL},
		{aliceAddr, "BTC", "USDT", "51000", "1", pb.OrderSide_SELL},
		{aliceAddr, "BTC", "USDT", "49000", "2", pb.OrderSide_SELL},
		{bobAddr, "ETH", "USDT", "3000", "5", pb.OrderSide_SELL},
		{bobAddr, "ETH", "USDT", "3100", "3", pb.OrderSide_SELL},
	}

	orderIDs := make([]string, 0, len(testOrders))
	for i, tc := range testOrders {
		orderID := tc.from + "_order_" + string(rune('0'+i))
		orderIDs = append(orderIDs, orderID)

		orderTx := &pb.AnyTx{
			Content: &pb.AnyTx_OrderTx{
				OrderTx: &pb.OrderTx{
					Base: &pb.BaseMessage{
						TxId:        orderID,
						FromAddress: tc.from,
						Status:      pb.Status_PENDING,
					},
					BaseToken:  tc.baseToken,
					QuoteToken: tc.quoteToken,
					Op:         pb.OrderOp_ADD,
					Side:       tc.side,
					Price:      tc.price,
					Amount:     tc.amount,
					// æ³¨æ„: FilledBase, FilledQuote, IsFilled å·²ç§»è‡³ OrderState
				},
			},
		}

		block := &pb.Block{
			BlockHash: "block_" + string(rune('0'+i)),
			Header: &pb.BlockHeader{
				PrevBlockHash: "prev_" + string(rune('0'+i)),
				Height:        uint64(i + 1),
			},
			Body: []*pb.AnyTx{orderTx},
		}

		// æ‰§è¡ŒåŒºå—
		result, err := executor.PreExecuteBlock(block)
		require.NoError(t, err)
		require.True(t, result.Valid, "Block should be valid")

		err = executor.CommitFinalizedBlock(block)
		require.NoError(t, err)
	}

	require.NoError(t, fullNodeDB.ForceFlush())
	time.Sleep(300 * time.Millisecond)

	t.Logf("âœ… Full node created %d orders", len(orderIDs))

	// éªŒè¯å…¨èŠ‚ç‚¹çš„è®¢å•æ•°æ®å’Œç´¢å¼•
	fullNodeOrderCount := countDBKeysWithPrefix(t, fullNodeDB, "v1_order_")
	// Key include side: pair:%s|side:%d|is_filled:%t|
	btcPrefix := fmt.Sprintf("v1_pair:BTC_USDT|side:%d|is_filled:false|", pb.OrderSide_SELL)
	ethPrefix := fmt.Sprintf("v1_pair:ETH_USDT|side:%d|is_filled:false|", pb.OrderSide_SELL)
	fullNodeBTCIndexCount := countDBKeysWithPrefix(t, fullNodeDB, btcPrefix)
	fullNodeETHIndexCount := countDBKeysWithPrefix(t, fullNodeDB, ethPrefix)

	t.Logf("ðŸ“Š Full node stats:")
	t.Logf("  - Orders: %d", fullNodeOrderCount)
	t.Logf("  - BTC indexes: %d", fullNodeBTCIndexCount)
	t.Logf("  - ETH indexes: %d", fullNodeETHIndexCount)

	assert.Equal(t, 5, fullNodeOrderCount, "Full node should have 5 orders")
	assert.Equal(t, 3, fullNodeBTCIndexCount, "Full node should have 3 BTC indexes")
	assert.Equal(t, 2, fullNodeETHIndexCount, "Full node should have 2 ETH indexes")

	// ========== ç¬¬äºŒæ­¥ï¼šæ¨¡æ‹Ÿè½»èŠ‚ç‚¹ä»Ž StateDB åŒæ­¥ ==========
	t.Log("ðŸ“¦ Step 2: Light node syncs from StateDB")

	lightNodeDir := t.TempDir()
	lightNodeDB, err := db.NewManager(lightNodeDir, logs.NewNodeLogger("test", 0))
	require.NoError(t, err, "Failed to create light node DB")
	defer lightNodeDB.Close()

	lightNodeDB.InitWriteQueue(10000, 200*time.Millisecond)

	// ä»Žå…¨èŠ‚ç‚¹çš„ StateDB åŒæ­¥è®¢å•æ•°æ®ï¼ˆä¸åŒ…å«ç´¢å¼•ï¼‰
	// ä¸ºäº†æ¨¡æ‹Ÿè½»èŠ‚ç‚¹åŒæ­¥ï¼Œæˆ‘ä»¬ç›´æŽ¥ä»Žå…¨èŠ‚ç‚¹æ•°æ®åº“æ‰«æå‡ºè¿™äº›çŠ¶æ€å¹¶æ³¨å…¥åˆ°è½»èŠ‚ç‚¹
	syncedCount := 0

	// 1. åŒæ­¥è®¢å•å®žä½“ (v1_order_)
	orders, _ := fullNodeDB.Scan("v1_order_")
	for k, v := range orders {
		if !strings.HasPrefix(k, "v1_orderstate_") {
			lightNodeDB.EnqueueSet(k, string(v))
			syncedCount++
		}
	}

	// 2. åŒæ­¥è®¢å•çŠ¶æ€ (v1_orderstate_)
	orderStates, _ := fullNodeDB.Scan("v1_orderstate_")
	for k, v := range orderStates {
		lightNodeDB.EnqueueSet(k, string(v))
	}

	// 3. åŒæ­¥è´¦æˆ·è®¢å•åˆ—è¡¨ (v1_acc_orders_)
	accOrders, _ := fullNodeDB.Scan("v1_acc_orders_")
	for k, v := range accOrders {
		lightNodeDB.EnqueueSet(k, string(v))
	}

	// å¼ºåˆ¶åˆ·ç›˜ï¼Œç¡®ä¿é‡å»ºæ—¶èƒ½è¯»åˆ°
	require.NoError(t, lightNodeDB.ForceFlush())

	require.NoError(t, lightNodeDB.ForceFlush())
	time.Sleep(300 * time.Millisecond)

	t.Logf("âœ… Light node synced %d orders from StateDB", syncedCount)

	// éªŒè¯è½»èŠ‚ç‚¹åªæœ‰è®¢å•æ•°æ®ï¼Œæ²¡æœ‰ç´¢å¼•
	lightNodeOrderCount := countDBKeysWithPrefix(t, lightNodeDB, "v1_order_")
	lightNodeIndexCount := countDBKeysWithPrefix(t, lightNodeDB, "v1_pair:")

	t.Logf("ðŸ“Š Light node stats (before rebuild):")
	t.Logf("  - Orders: %d", lightNodeOrderCount)
	t.Logf("  - Indexes: %d", lightNodeIndexCount)

	assert.Equal(t, 5, lightNodeOrderCount, "Light node should have 5 orders")
	assert.Equal(t, 0, lightNodeIndexCount, "Light node should have 0 indexes before rebuild")

	// ========== ç¬¬ä¸‰æ­¥ï¼šè½»èŠ‚ç‚¹é‡å»ºç´¢å¼• ==========
	t.Log("ðŸ“¦ Step 3: Light node rebuilds indexes from order data")

	rebuiltCount, err := db.RebuildOrderPriceIndexes(lightNodeDB)
	require.NoError(t, err, "Failed to rebuild indexes")
	time.Sleep(300 * time.Millisecond)

	t.Logf("âœ… Light node rebuilt %d indexes", rebuiltCount)

	// éªŒè¯é‡å»ºåŽçš„ç´¢å¼•æ•°é‡
	btcPrefix2 := fmt.Sprintf("v1_pair:BTC_USDT|side:%d|is_filled:false|", pb.OrderSide_SELL)
	ethPrefix2 := fmt.Sprintf("v1_pair:ETH_USDT|side:%d|is_filled:false|", pb.OrderSide_SELL)
	lightNodeBTCIndexCount := countDBKeysWithPrefix(t, lightNodeDB, btcPrefix2)
	lightNodeETHIndexCount := countDBKeysWithPrefix(t, lightNodeDB, ethPrefix2)

	t.Logf("ðŸ“Š Light node stats (after rebuild):")
	t.Logf("  - BTC indexes: %d", lightNodeBTCIndexCount)
	t.Logf("  - ETH indexes: %d", lightNodeETHIndexCount)

	assert.Equal(t, 5, rebuiltCount, "Should rebuild 5 indexes")
	assert.Equal(t, 3, lightNodeBTCIndexCount, "Light node should have 3 BTC indexes")
	assert.Equal(t, 2, lightNodeETHIndexCount, "Light node should have 2 ETH indexes")

	// ========== ç¬¬å››æ­¥ï¼šéªŒè¯ç´¢å¼•å†…å®¹ä¸€è‡´æ€§ ==========
	t.Log("ðŸ“¦ Step 4: Verify index consistency between full node and light node")

	// éªŒè¯ BTC ç´¢å¼•
	fullNodeBTCOrders, err := fullNodeDB.ScanOrdersByPairs([]string{"BTC_USDT"})
	require.NoError(t, err)

	lightNodeBTCOrders, err := lightNodeDB.ScanOrdersByPairs([]string{"BTC_USDT"})
	require.NoError(t, err)

	assert.Equal(t, len(fullNodeBTCOrders["BTC_USDT"]), len(lightNodeBTCOrders["BTC_USDT"]),
		"BTC order count should match")

	// éªŒè¯ ETH ç´¢å¼•
	fullNodeETHOrders, err := fullNodeDB.ScanOrdersByPairs([]string{"ETH_USDT"})
	require.NoError(t, err)

	lightNodeETHOrders, err := lightNodeDB.ScanOrdersByPairs([]string{"ETH_USDT"})
	require.NoError(t, err)

	assert.Equal(t, len(fullNodeETHOrders["ETH_USDT"]), len(lightNodeETHOrders["ETH_USDT"]),
		"ETH order count should match")

	// éªŒè¯è®¢å•æ•°æ®ä¸€è‡´æ€§
	for _, orderID := range orderIDs {
		fullNodeOrder := getOrder(t, fullNodeDB, orderID)
		lightNodeOrder := getOrder(t, lightNodeDB, orderID)

		assert.Equal(t, fullNodeOrder.Price, lightNodeOrder.Price,
			"Order %s price should match", orderID)
		assert.Equal(t, fullNodeOrder.Amount, lightNodeOrder.Amount,
			"Order %s amount should match", orderID)
	}

	t.Log("âœ… Index consistency verified")

	// ========== æµ‹è¯•æ€»ç»“ ==========
	t.Log("ðŸŽ‰ ========== Integration Test Summary ==========")
	t.Log("âœ… Full node: Created orders and indexes")
	t.Log("âœ… StateDB: Synced order data (not indexes)")
	t.Log("âœ… Light node: Synced from StateDB")
	t.Log("âœ… Light node: Rebuilt indexes from order data")
	t.Log("âœ… Consistency: Full node and light node indexes match")
	t.Log("ðŸŽ‰ Light node index rebuild integration test PASSED!")
}

// ========== è¾…åŠ©å‡½æ•° ==========

// createTestAccount åˆ›å»ºæµ‹è¯•è´¦æˆ·ï¼ˆä½¿ç”¨åˆ†ç¦»å­˜å‚¨ï¼‰
func createTestAccount(t *testing.T, dbMgr *db.Manager, address string, balances map[string]string) {
	// åˆ›å»ºè´¦æˆ·ï¼ˆä¸å«ä½™é¢ï¼‰
	account := &pb.Account{
		Address: address,
	}

	// ä½¿ç”¨ proto åºåˆ—åŒ–è´¦æˆ·
	accountData, err := proto.Marshal(account)
	require.NoError(t, err)

	accountKey := keys.KeyAccount(address)
	dbMgr.EnqueueSet(accountKey, string(accountData))

	// ä½¿ç”¨ KeyBalance åˆ†ç¦»å­˜å‚¨ä½™é¢
	for token, amount := range balances {
		bal := &pb.TokenBalanceRecord{
			Balance: &pb.TokenBalance{
				Balance:            amount,
				MinerLockedBalance: "0",
			},
		}
		balData, err := proto.Marshal(bal)
		require.NoError(t, err)
		balKey := keys.KeyBalance(address, token)
		dbMgr.EnqueueSet(balKey, string(balData))
	}
}

// getOrder èŽ·å–è®¢å•æ•°æ®
func getOrder(t *testing.T, dbMgr *db.Manager, orderID string) *pb.OrderTx {
	raw, closer, err := dbMgr.Db.Get([]byte(keys.KeyOrder(orderID)))
	require.NoError(t, err)
	val := make([]byte, len(raw))
	copy(val, raw)
	closer.Close()
	var order pb.OrderTx
	require.NoError(t, proto.Unmarshal(val, &order))
	return &order
}

// countDBKeysWithPrefix è®¡ç®—æŒ‡å®šå‰ç¼€çš„ key æ•°é‡
func countDBKeysWithPrefix(t *testing.T, dbMgr *db.Manager, prefix string) int {
	count := 0
	p := []byte(prefix)
	upper := make([]byte, len(p))
	copy(upper, p)
	for i := len(upper) - 1; i >= 0; i-- {
		upper[i]++
		if upper[i] != 0 {
			break
		}
	}
	iter, err := dbMgr.Db.NewIter(&pebble.IterOptions{LowerBound: p, UpperBound: upper})
	require.NoError(t, err)
	defer iter.Close()
	for iter.SeekGE(p); iter.Valid(); iter.Next() {
		count++
	}
	require.NoError(t, iter.Error())
	return count
}
