package vm_test

import (
	"testing"
	"time"

	"dex/db"
	"dex/keys"
	"dex/logs"
	"dex/pb"
	"dex/vm"

	"github.com/stretchr/testify/assert"
	"github.com/stretchr/testify/require"
	"google.golang.org/protobuf/proto"
)

// TestE2E_OrderMatching_VM_StateDB_Integration
// ç«¯åˆ°ç«¯é›†æˆæµ‹è¯•ï¼šéªŒè¯ VMã€Matchingã€StateDB ä¸‰æ¨¡å—å®Œç¾é…åˆ
//
// æµ‹è¯•åœºæ™¯ï¼š
// 1. åˆ›å»ºçœŸå®çš„ Badger + StateDB
// 2. åˆå§‹åŒ–è´¦æˆ·ä½™é¢
// 3. æäº¤è®¢å•äº¤æ˜“ï¼Œè§¦å‘æ’®åˆ
// 4. éªŒè¯ï¼š
//   - VM æ­£ç¡®æ‰§è¡Œ
//   - Matching æ­£ç¡®æ’®åˆ
//   - StateDB æ­£ç¡®åŒæ­¥è´¦æˆ·æ•°æ®
//   - Badger æŒä¹…åŒ–æ‰€æœ‰æ•°æ®
//   - æ•°æ®ä¸€è‡´æ€§
func TestE2E_OrderMatching_VM_StateDB_Integration(t *testing.T) {
	// ========== ç¬¬ä¸€æ­¥ï¼šåˆå§‹åŒ–çœŸå®æ•°æ®åº“ ==========
	tmpDir := t.TempDir() // è‡ªåŠ¨æ¸…ç†
	t.Logf("ğŸ“ Test database directory: %s", tmpDir)

	dbMgr, err := db.NewManager(tmpDir, logs.NewNodeLogger("test", 0))
	require.NoError(t, err, "Failed to create DB manager")
	defer dbMgr.Close()

	// å¯åŠ¨å†™é˜Ÿåˆ—
	dbMgr.InitWriteQueue(100, 200*time.Millisecond)
	t.Log("âœ… Database initialized (Badger + StateDB)")

	// ========== ç¬¬äºŒæ­¥ï¼šåˆå§‹åŒ– VM Executor ==========
	registry := vm.NewHandlerRegistry()
	require.NoError(t, vm.RegisterDefaultHandlers(registry))

	cache := vm.NewSpecExecLRU(100)
	executor := vm.NewExecutor(dbMgr, registry, cache)
	t.Log("âœ… VM Executor initialized")

	// ========== ç¬¬ä¸‰æ­¥ï¼šå‡†å¤‡æµ‹è¯•è´¦æˆ· ==========
	// Alice: æœ‰ 10 BTC å’Œ 100000 USDT
	// Bob: æœ‰ 0 BTC å’Œ 100000 USDT
	aliceAddr := "alice_test_addr"
	bobAddr := "bob_test_addr"

	createE2ETestAccount(t, dbMgr, aliceAddr, map[string]string{
		"BTC":  "10.0",
		"USDT": "100000.0",
	})
	createE2ETestAccount(t, dbMgr, bobAddr, map[string]string{
		"BTC":  "0.0",
		"USDT": "100000.0",
	})

	// å¼ºåˆ¶åˆ·æ–°åˆ°æ•°æ®åº“
	require.NoError(t, dbMgr.ForceFlush())
	time.Sleep(100 * time.Millisecond)
	t.Log("âœ… Test accounts created (Alice: 10 BTC, Bob: 0 BTC)")

	// ========== ç¬¬å››æ­¥ï¼šBlock 1 - Alice æŒ‚å–å• ==========
	sellOrderTx := &pb.AnyTx{
		Content: &pb.AnyTx_OrderTx{
			OrderTx: &pb.OrderTx{
				Base: &pb.BaseMessage{
					TxId:        "sell_order_001",
					FromAddress: aliceAddr,
					Status:      pb.Status_PENDING,
				},
				BaseToken:   "BTC",
				QuoteToken:  "USDT",
				Op:          pb.OrderOp_ADD,
				Side:        pb.OrderSide_SELL, // æ˜ç¡®è®¾ç½®å–å•æ–¹å‘
				Price:       "50000",           // å–ä»· 50000 USDT/BTC
				Amount:      "1.0",             // å– 1 BTC
				FilledBase:  "0",
				FilledQuote: "0",
				IsFilled:    false,
			},
		},
	}

	block1 := &pb.Block{
		BlockHash:     "block_001",
		PrevBlockHash: "genesis",
		Height:        1,
		Body:          []*pb.AnyTx{sellOrderTx},
	}

	t.Log("ğŸ“¦ Executing Block 1: Alice places sell order (1 BTC @ 50000 USDT)")
	result1, err := executor.PreExecuteBlock(block1)
	require.NoError(t, err)
	if !result1.Valid {
		t.Logf("Block 1 failed, reason: %s", result1.Reason)
	}
	require.True(t, result1.Valid, "Block 1 should be valid")
	require.Equal(t, 1, len(result1.Receipts))
	assert.Equal(t, "SUCCEED", result1.Receipts[0].Status)

	// æäº¤åŒºå—
	require.NoError(t, executor.CommitFinalizedBlock(block1))
	require.NoError(t, dbMgr.ForceFlush())
	time.Sleep(100 * time.Millisecond)
	t.Log("âœ… Block 1 committed: Sell order placed")

	// ========== ç¬¬äº”æ­¥ï¼šBlock 2 - Bob æŒ‚ä¹°å•ï¼Œè§¦å‘æ’®åˆ ==========
	// Bob ä¹° BTCï¼šbase_token=USDTï¼ˆæ”¯ä»˜çš„å¸ç§ï¼‰ï¼Œquote_token=BTCï¼ˆæƒ³è¦çš„å¸ç§ï¼‰
	// amount=25000ï¼ˆæ”¯ä»˜ 25000 USDTï¼‰
	// price=50000ï¼ˆUSDT/BTCï¼Œå³ 1 BTC = 50000 USDTï¼Œä¸ Alice çš„å–å•ä»·æ ¼ä¸€è‡´ï¼‰
	//
	// æ’®åˆé€»è¾‘ï¼š
	// - Bob çš„ä¹°å•ï¼šèŠ±è´¹ 25000 USDTï¼ŒæŒ‰ price=50000 ä¹°å…¥ 25000 / 50000 = 0.5 BTC
	// - Alice çš„å–å•ï¼šå–å‡º BTCï¼ŒæŒ‰ price=50000 å¾—åˆ° USDT
	// - æ’®åˆæ—¶ä»·æ ¼åŒ¹é…ï¼šéƒ½æ˜¯ 50000 USDT/BTC
	// ä¹°å•ï¼šBaseToken=BTCï¼ˆè¦ä¹°çš„å¸ï¼‰ï¼ŒQuoteToken=USDTï¼ˆæ”¯ä»˜çš„å¸ï¼‰ï¼ŒSide=BUY
	buyOrderTx := &pb.AnyTx{
		Content: &pb.AnyTx_OrderTx{
			OrderTx: &pb.OrderTx{
				Base: &pb.BaseMessage{
					TxId:        "buy_order_001",
					FromAddress: bobAddr,
					Status:      pb.Status_PENDING,
				},
				BaseToken:   "BTC",
				QuoteToken:  "USDT",
				Op:          pb.OrderOp_ADD,
				Side:        pb.OrderSide_BUY, // æ˜ç¡®è®¾ç½®ä¹°å•æ–¹å‘
				Price:       "50000",          // USDT/BTC (1 BTC = 50000 USDT)
				Amount:      "0.5",            // ä¹° 0.5 BTC
				FilledBase:  "0",
				FilledQuote: "0",
				IsFilled:    false,
			},
		},
	}

	block2 := &pb.Block{
		BlockHash:     "block_002",
		PrevBlockHash: "block_001",
		Height:        2,
		Body:          []*pb.AnyTx{buyOrderTx},
	}

	t.Log("ğŸ“¦ Executing Block 2: Bob places buy order (0.5 BTC @ 50000 USDT) - Should trigger matching")
	result2, err := executor.PreExecuteBlock(block2)
	require.NoError(t, err)
	require.True(t, result2.Valid, "Block 2 should be valid")
	require.Equal(t, 1, len(result2.Receipts))
	assert.Equal(t, "SUCCEED", result2.Receipts[0].Status)

	// æäº¤åŒºå—
	require.NoError(t, executor.CommitFinalizedBlock(block2))
	require.NoError(t, dbMgr.ForceFlush())
	time.Sleep(500 * time.Millisecond) // å¢åŠ ç­‰å¾…æ—¶é—´
	t.Log("âœ… Block 2 committed: Buy order matched with sell order")

	// ========== ç¬¬å…­æ­¥ï¼šéªŒè¯æ’®åˆç»“æœ ==========
	t.Log("ğŸ” Verifying matching results...")

	// éªŒè¯ Alice çš„ä½™é¢å˜åŒ–
	// Alice çš„å–å•ï¼šbase_token=BTC, quote_token=USDT, amount=1.0, price=50000
	// æˆäº¤ tradeAmtï¼ˆBTC æ•°é‡ï¼‰ï¼Œè·å¾— tradeAmt * 50000 USDT
	// é¢„æœŸï¼šå–å‡º 0.5 BTCï¼Œè·å¾— 0.5 * 50000 = 25000 USDT
	// - BTC: 10.0 - 0.5 = 9.5
	// - USDT: 100000 + 25000 = 125000
	aliceAccount := getE2EAccount(t, dbMgr, aliceAddr)
	t.Logf("Alice actual: BTC=%s, USDT=%s",
		aliceAccount.Balances["BTC"].Balance,
		aliceAccount.Balances["USDT"].Balance)
	assert.Equal(t, "9.5", aliceAccount.Balances["BTC"].Balance, "Alice should have 9.5 BTC")
	assert.Equal(t, "125000", aliceAccount.Balances["USDT"].Balance, "Alice should have 125000 USDT")

	// éªŒè¯ Bob çš„ä½™é¢å˜åŒ–
	// Bob çš„ä¹°å•ï¼šbase_token=USDT, quote_token=BTC, amount=25000, price=0.00002
	// æˆäº¤ tradeAmtï¼ˆUSDT æ•°é‡ï¼‰ï¼Œè·å¾— tradeAmt * 0.00002 BTC
	// é¢„æœŸï¼šèŠ±è´¹ 25000 USDTï¼Œè·å¾— 25000 * 0.00002 = 0.5 BTC
	// - USDT: 100000 - 25000 = 75000
	// - BTC: 0 + 0.5 = 0.5
	bobAccount := getE2EAccount(t, dbMgr, bobAddr)
	t.Logf("Bob actual: BTC=%s, USDT=%s",
		bobAccount.Balances["BTC"].Balance,
		bobAccount.Balances["USDT"].Balance)
	assert.Equal(t, "0.5", bobAccount.Balances["BTC"].Balance, "Bob should have 0.5 BTC")
	assert.Equal(t, "75000", bobAccount.Balances["USDT"].Balance, "Bob should have 75000 USDT")

	t.Log("âœ… Account balances verified correctly")

	// ========== ç¬¬ä¸ƒæ­¥ï¼šéªŒè¯æ•°æ®æŒä¹…åŒ– ==========
	t.Log("ğŸ” Verifying data persistence...")

	// é‡æ–°è¯»å–è´¦æˆ·ï¼ŒéªŒè¯æ•°æ®å·²æ­£ç¡®æŒä¹…åŒ–
	aliceFromDB := getE2EAccount(t, dbMgr, aliceAddr)
	assert.Equal(t, "9.5", aliceFromDB.Balances["BTC"].Balance, "DB should have correct Alice BTC balance")
	assert.Equal(t, "125000", aliceFromDB.Balances["USDT"].Balance, "DB should have correct Alice USDT balance")

	bobFromDB := getE2EAccount(t, dbMgr, bobAddr)
	assert.Equal(t, "0.5", bobFromDB.Balances["BTC"].Balance, "DB should have correct Bob BTC balance")
	assert.Equal(t, "75000", bobFromDB.Balances["USDT"].Balance, "DB should have correct Bob USDT balance")

	t.Log("âœ… Data persistence verified")

	// ========== ç¬¬å…«æ­¥ï¼šéªŒè¯è®¢å•çŠ¶æ€ ==========
	t.Log("ğŸ” Verifying order status...")

	// éªŒè¯å–å•éƒ¨åˆ†æˆäº¤
	sellOrder := getE2EOrder(t, dbMgr, "sell_order_001")
	assert.Equal(t, "0.5", sellOrder.FilledBase, "Sell order should have 0.5 BTC filled")
	assert.False(t, sellOrder.IsFilled, "Sell order should not be fully filled")

	// éªŒè¯ä¹°å•å®Œå…¨æˆäº¤
	// ä¹°å•ï¼šBaseToken=BTCï¼ŒAmount=0.5ï¼Œæˆäº¤å FilledBase=0.5
	buyOrder := getE2EOrder(t, dbMgr, "buy_order_001")
	assert.Equal(t, "0.5", buyOrder.FilledBase, "Buy order should have 0.5 BTC filled")
	assert.True(t, buyOrder.IsFilled, "Buy order should be fully filled")

	t.Log("âœ… Order status verified")

	// ========== ç¬¬ä¹æ­¥ï¼šéªŒè¯æ•°æ®ä¸€è‡´æ€§ ==========
	t.Log("ğŸ” Verifying data consistency...")

	// éªŒè¯è´¦æˆ·ä½™é¢ä¸è®¢å•çŠ¶æ€ä¸€è‡´
	assert.Equal(t, bobAccount.Balances["BTC"].Balance, bobFromDB.Balances["BTC"].Balance,
		"Account balance should match between reads")
	assert.Equal(t, bobAccount.Balances["USDT"].Balance, bobFromDB.Balances["USDT"].Balance,
		"Account balance should match between reads")

	t.Log("âœ… Data consistency verified")

	// ========== æµ‹è¯•æ€»ç»“ ==========
	t.Log("ğŸ‰ ========== E2E Test Summary ==========")
	t.Log("âœ… VM execution: PASS")
	t.Log("âœ… Order matching: PASS")
	t.Log("âœ… StateDB sync: PASS")
	t.Log("âœ… Data persistence: PASS")
	t.Log("âœ… Data consistency: PASS")
	t.Log("ğŸ‰ All checks passed! VM + Matching + StateDB integration working perfectly!")
}

// ========== è¾…åŠ©å‡½æ•° ==========

// createE2ETestAccount åˆ›å»ºæµ‹è¯•è´¦æˆ·å¹¶å†™å…¥æ•°æ®åº“ï¼ˆE2E æµ‹è¯•ä¸“ç”¨ï¼‰
func createE2ETestAccount(t *testing.T, dbMgr *db.Manager, address string, balances map[string]string) {
	account := &pb.Account{
		Address:  address,
		Balances: make(map[string]*pb.TokenBalance),
	}

	for token, balance := range balances {
		account.Balances[token] = &pb.TokenBalance{
			Balance:            balance,
			MinerLockedBalance: "0",
		}
	}

	// ä½¿ç”¨ proto åºåˆ—åŒ–ï¼ˆä¸ç”Ÿäº§ä»£ç ä¿æŒä¸€è‡´ï¼‰
	accountData, err := proto.Marshal(account)
	require.NoError(t, err)

	accountKey := keys.KeyAccount(address)
	dbMgr.EnqueueSet(accountKey, string(accountData))
}

// getE2EAccount ä»æ•°æ®åº“è¯»å–è´¦æˆ·ï¼ˆE2E æµ‹è¯•ä¸“ç”¨ï¼‰
func getE2EAccount(t *testing.T, dbMgr *db.Manager, address string) *pb.Account {
	accountKey := keys.KeyAccount(address)
	accountData, err := dbMgr.Get(accountKey)
	require.NoError(t, err)
	require.NotNil(t, accountData)

	var account pb.Account
	// ä½¿ç”¨ proto ååºåˆ—åŒ–ï¼ˆä¸ç”Ÿäº§ä»£ç ä¿æŒä¸€è‡´ï¼‰
	require.NoError(t, proto.Unmarshal(accountData, &account))
	return &account
}

// getE2EOrder ä»æ•°æ®åº“è¯»å–è®¢å•ï¼ˆE2E æµ‹è¯•ä¸“ç”¨ï¼‰
func getE2EOrder(t *testing.T, dbMgr *db.Manager, orderID string) *pb.OrderTx {
	orderKey := keys.KeyOrder(orderID)
	orderData, err := dbMgr.Get(orderKey)
	require.NoError(t, err)
	require.NotNil(t, orderData)

	var order pb.OrderTx
	require.NoError(t, proto.Unmarshal(orderData, &order))
	return &order
}

// TestE2E_MultiBlock_OrderMatching
// æµ‹è¯•å¤šåŒºå—è¿ç»­æ‰§è¡Œåœºæ™¯
//
// åœºæ™¯ï¼š
// Block 1: Alice æŒ‚ 3 ä¸ªå–å•ï¼ˆä¸åŒä»·æ ¼ï¼‰
// Block 2: Bob æŒ‚ 1 ä¸ªä¹°å•ï¼Œéƒ¨åˆ†æ’®åˆ
// Block 3: Charlie æŒ‚ 1 ä¸ªä¹°å•ï¼Œç»§ç»­æ’®åˆ
// Block 4: Alice å–æ¶ˆå‰©ä½™è®¢å•
func TestE2E_MultiBlock_OrderMatching(t *testing.T) {
	// åˆå§‹åŒ–æ•°æ®åº“
	tmpDir := t.TempDir()
	t.Logf("ğŸ“ Test database directory: %s", tmpDir)

	dbMgr, err := db.NewManager(tmpDir, logs.NewNodeLogger("test", 0))
	require.NoError(t, err)
	defer dbMgr.Close()

	dbMgr.InitWriteQueue(100, 200*time.Millisecond)

	// åˆå§‹åŒ– VM
	registry := vm.NewHandlerRegistry()
	require.NoError(t, vm.RegisterDefaultHandlers(registry))
	cache := vm.NewSpecExecLRU(100)
	executor := vm.NewExecutor(dbMgr, registry, cache)

	// åˆ›å»ºæµ‹è¯•è´¦æˆ·
	aliceAddr := "alice_multi"
	bobAddr := "bob_multi"
	charlieAddr := "charlie_multi"

	createE2ETestAccount(t, dbMgr, aliceAddr, map[string]string{
		"BTC":  "10.0",
		"USDT": "0",
	})
	createE2ETestAccount(t, dbMgr, bobAddr, map[string]string{
		"BTC":  "0",
		"USDT": "200000",
	})
	createE2ETestAccount(t, dbMgr, charlieAddr, map[string]string{
		"BTC":  "0",
		"USDT": "200000",
	})

	require.NoError(t, dbMgr.ForceFlush())
	time.Sleep(100 * time.Millisecond)
	t.Log("âœ… Test accounts created")

	// ========== Block 1: Alice æŒ‚ 3 ä¸ªå–å• ==========
	block1 := &pb.Block{
		BlockHash:     "multi_block_001",
		PrevBlockHash: "genesis",
		Height:        1,
		Body: []*pb.AnyTx{
			createSellOrder("sell_1", aliceAddr, "BTC", "USDT", "49000", "1.0"),
			createSellOrder("sell_2", aliceAddr, "BTC", "USDT", "50000", "2.0"),
			createSellOrder("sell_3", aliceAddr, "BTC", "USDT", "51000", "3.0"),
		},
	}

	t.Log("ğŸ“¦ Block 1: Alice places 3 sell orders")
	result1, err := executor.PreExecuteBlock(block1)
	require.NoError(t, err)
	require.True(t, result1.Valid)
	require.NoError(t, executor.CommitFinalizedBlock(block1))
	require.NoError(t, dbMgr.ForceFlush())
	time.Sleep(500 * time.Millisecond)
	t.Log("âœ… Block 1 committed")

	// ========== Block 2: Bob ä¹°å…¥ 1.5 BTC ==========
	// Bob æƒ³ä¹° 1.5 BTCï¼Œæ„¿æ„æ”¯ä»˜æœ€é«˜ 51000 USDT/BTCï¼ˆé«˜äº sell_2 çš„ 50000ï¼‰
	// éœ€è¦æ”¯ä»˜ï¼š1.5 * 51000 = 76500 USDT
	// æ‰€ä»¥ amount åº”è¯¥æ˜¯ 76500ï¼ˆæ”¯ä»˜çš„ USDT æ•°é‡ï¼‰
	// é¢„æœŸæ’®åˆï¼š
	// - å…ˆåŒ¹é… sell_1: 1 BTC @ 49000 = 49000 USDT
	// - å†åŒ¹é… sell_2: 0.5 BTC @ 50000 = 25000 USDT
	// - æ€»è®¡ï¼š1.5 BTCï¼ŒèŠ±è´¹ 74000 USDT
	block2 := &pb.Block{
		BlockHash:     "multi_block_002",
		PrevBlockHash: "multi_block_001",
		Height:        2,
		Body: []*pb.AnyTx{
			createBuyOrder("buy_1", bobAddr, "USDT", "BTC", "51000", "76500"),
		},
	}

	t.Log("ğŸ“¦ Block 2: Bob buys 1.5 BTC (pays 75000 USDT @ 50000)")
	result2, err := executor.PreExecuteBlock(block2)
	require.NoError(t, err)
	require.True(t, result2.Valid)

	// æ‰“å°æ’®åˆäº‹ä»¶
	t.Logf("Block 2 receipts count: %d", len(result2.Receipts))
	for i, receipt := range result2.Receipts {
		t.Logf("Receipt %d: TxID=%s, Status=%s, WriteCount=%d",
			i, receipt.TxID, receipt.Status, receipt.WriteCount)
	}

	require.NoError(t, executor.CommitFinalizedBlock(block2))
	require.NoError(t, dbMgr.ForceFlush())
	time.Sleep(500 * time.Millisecond)
	t.Log("âœ… Block 2 committed")

	// éªŒè¯ Bob çš„ä½™é¢
	// é¢„æœŸï¼šä¹°å…¥ 1.5 BTCï¼ŒèŠ±è´¹ 1*49000 + 0.5*50000 = 49000 + 25000 = 74000 USDT
	// ï¼ˆå› ä¸ºä¼šå…ˆåŒ¹é…ä»·æ ¼æ›´ä½çš„ sell_1: 49000ï¼‰
	bobAccount := getE2EAccount(t, dbMgr, bobAddr)
	t.Logf("Bob BTC balance: %s (expected: 1.5)", bobAccount.Balances["BTC"].Balance)
	t.Logf("Bob USDT balance: %s (expected: 126000)", bobAccount.Balances["USDT"].Balance)

	assert.Equal(t, "1.5", bobAccount.Balances["BTC"].Balance, "Bob should have 1.5 BTC")
	assert.Equal(t, "126000", bobAccount.Balances["USDT"].Balance, "Bob should have 126000 USDT left")

	// æ£€æŸ¥è®¢å•çŠ¶æ€
	sell1 := getE2EOrder(t, dbMgr, "sell_1")
	assert.Equal(t, "1", sell1.FilledBase, "sell_1 should be fully filled (1 BTC)")
	assert.True(t, sell1.IsFilled, "sell_1 should be marked as filled")

	sell2 := getE2EOrder(t, dbMgr, "sell_2")
	assert.Equal(t, "0.5", sell2.FilledBase, "sell_2 should be partially filled (0.5 BTC)")
	assert.False(t, sell2.IsFilled, "sell_2 should not be fully filled")

	buyOrder1 := getE2EOrder(t, dbMgr, "buy_1")
	assert.Equal(t, "1.5", buyOrder1.FilledQuote, "buy_1 should have bought 1.5 BTC")
	assert.True(t, buyOrder1.IsFilled, "buy_1 should be fully filled")

	// ========== Block 3: Charlie ä¹°å…¥ 2 BTC ==========
	// Charlie æƒ³ä¹° 2 BTCï¼Œæ„¿æ„æ”¯ä»˜æœ€é«˜ 51000 USDT/BTC
	// éœ€è¦æ”¯ä»˜ï¼š2 * 51000 = 102000 USDT
	// ä½†å®é™…ä¼šåŒ¹é…åˆ°æ›´ä¾¿å®œçš„ä»·æ ¼ï¼š
	// - sell_2 å‰©ä½™ 1.5 BTC @ 50000 = 75000 USDT
	// - sell_3 å‰©ä½™ 0.5 BTC @ 51000 = 25500 USDT
	// æ€»è®¡ï¼š100500 USDT
	block3 := &pb.Block{
		BlockHash:     "multi_block_003",
		PrevBlockHash: "multi_block_002",
		Height:        3,
		Body: []*pb.AnyTx{
			createBuyOrder("buy_2", charlieAddr, "USDT", "BTC", "51000", "102000"),
		},
	}

	t.Log("ğŸ“¦ Block 3: Charlie buys 2 BTC (pays up to 102000 USDT @ 51000)")
	result3, err := executor.PreExecuteBlock(block3)
	require.NoError(t, err)
	require.True(t, result3.Valid)
	require.NoError(t, executor.CommitFinalizedBlock(block3))
	require.NoError(t, dbMgr.ForceFlush())
	time.Sleep(500 * time.Millisecond)
	t.Log("âœ… Block 3 committed")

	// éªŒè¯ Charlie çš„ä½™é¢
	// é¢„æœŸï¼šä¹°å…¥ 2 BTCï¼ŒèŠ±è´¹ 1.5*50000 + 0.5*51000 = 75000 + 25500 = 100500 USDT
	charlieAccount := getE2EAccount(t, dbMgr, charlieAddr)
	t.Logf("Charlie BTC balance: %s (expected: 2.0)", charlieAccount.Balances["BTC"].Balance)
	t.Logf("Charlie USDT balance: %s (expected: 99500)", charlieAccount.Balances["USDT"].Balance)

	assert.Equal(t, "2", charlieAccount.Balances["BTC"].Balance, "Charlie should have 2 BTC")
	assert.Equal(t, "99500", charlieAccount.Balances["USDT"].Balance, "Charlie should have 99500 USDT left")

	// æ£€æŸ¥è®¢å•çŠ¶æ€
	sell2Final := getE2EOrder(t, dbMgr, "sell_2")
	assert.Equal(t, "2", sell2Final.FilledBase, "sell_2 should be fully filled (2 BTC total)")
	assert.True(t, sell2Final.IsFilled, "sell_2 should be marked as filled")

	sell3 := getE2EOrder(t, dbMgr, "sell_3")
	assert.Equal(t, "0.5", sell3.FilledBase, "sell_3 should be partially filled (0.5 BTC)")
	assert.False(t, sell3.IsFilled, "sell_3 should not be fully filled")

	// ========== éªŒè¯æœ€ç»ˆçŠ¶æ€ ==========
	t.Log("ğŸ” Verifying final state...")

	// Alice åº”è¯¥å–å‡ºäº† 3.5 BTC (1 + 1.5 + 0.5)
	// Bob ä¹°å…¥ï¼š1*49000 + 0.5*50000 = 74000 USDT
	// Charlie ä¹°å…¥ï¼š1.5*50000 + 0.5*51000 = 75000 + 25500 = 100500 USDT
	// Alice æ€»æ”¶å…¥ï¼š74000 + 100500 = 174500 USDT
	// å‰©ä½™ï¼š10 - 3.5 = 6.5 BTC
	aliceAccount := getE2EAccount(t, dbMgr, aliceAddr)
	t.Logf("Alice final BTC: %s (expected: 6.5), USDT: %s (expected: 174500)",
		aliceAccount.Balances["BTC"].Balance,
		aliceAccount.Balances["USDT"].Balance)

	assert.Equal(t, "6.5", aliceAccount.Balances["BTC"].Balance, "Alice should have 6.5 BTC left")
	assert.Equal(t, "174500", aliceAccount.Balances["USDT"].Balance, "Alice should have 174500 USDT")

	// éªŒè¯æ•°æ®æŒä¹…åŒ–
	bobAccountFinal := getE2EAccount(t, dbMgr, bobAddr)
	charlieAccountFinal := getE2EAccount(t, dbMgr, charlieAddr)

	t.Logf("Bob final BTC: %s, USDT: %s",
		bobAccountFinal.Balances["BTC"].Balance,
		bobAccountFinal.Balances["USDT"].Balance)
	t.Logf("Charlie final BTC: %s, USDT: %s",
		charlieAccountFinal.Balances["BTC"].Balance,
		charlieAccountFinal.Balances["USDT"].Balance)

	assert.Equal(t, "1.5", bobAccountFinal.Balances["BTC"].Balance, "Bob should have 1.5 BTC")
	assert.Equal(t, "126000", bobAccountFinal.Balances["USDT"].Balance, "Bob should have 126000 USDT")
	assert.Equal(t, "2", charlieAccountFinal.Balances["BTC"].Balance, "Charlie should have 2 BTC")
	assert.Equal(t, "99500", charlieAccountFinal.Balances["USDT"].Balance, "Charlie should have 99500 USDT")

	// éªŒè¯æ€»é‡å®ˆæ’
	// BTC æ€»é‡ï¼š10 (Aliceåˆå§‹) = 6.5 (Alice) + 1.5 (Bob) + 2 (Charlie) âœ…
	// USDT æ€»é‡ï¼š400000 (Bob+Charlieåˆå§‹) = 174500 (Alice) + 126000 (Bob) + 99500 (Charlie) = 400000 âœ…
	t.Log("âœ… Multi-block test completed successfully")
}

// ========== è¾…åŠ©å‡½æ•°ï¼šåˆ›å»ºè®¢å• ==========

func createSellOrder(txID, from, base, quote, price, amount string) *pb.AnyTx {
	return &pb.AnyTx{
		Content: &pb.AnyTx_OrderTx{
			OrderTx: &pb.OrderTx{
				Base: &pb.BaseMessage{
					TxId:        txID,
					FromAddress: from,
					Status:      pb.Status_PENDING,
				},
				BaseToken:   base,
				QuoteToken:  quote,
				Op:          pb.OrderOp_ADD,
				Side:        pb.OrderSide_SELL, // æ˜ç¡®è®¾ç½®å–å•æ–¹å‘
				Price:       price,
				Amount:      amount,
				FilledBase:  "0",
				FilledQuote: "0",
				IsFilled:    false,
			},
		},
	}
}

func createBuyOrder(txID, from, base, quote, price, amount string) *pb.AnyTx {
	return &pb.AnyTx{
		Content: &pb.AnyTx_OrderTx{
			OrderTx: &pb.OrderTx{
				Base: &pb.BaseMessage{
					TxId:        txID,
					FromAddress: from,
					Status:      pb.Status_PENDING,
				},
				BaseToken:   base,
				QuoteToken:  quote,
				Op:          pb.OrderOp_ADD,
				Side:        pb.OrderSide_BUY, // æ˜ç¡®è®¾ç½®ä¹°å•æ–¹å‘
				Price:       price,
				Amount:      amount,
				FilledBase:  "0",
				FilledQuote: "0",
				IsFilled:    false,
			},
		},
	}
}

// TestE2E_TransactionOrderDeterminism
// æµ‹è¯•äº¤æ˜“æ‰§è¡Œé¡ºåºçš„ç¡®å®šæ€§
//
// åœºæ™¯ï¼š
// åœ¨åŒä¸€ä¸ªåŒºå—ä¸­ï¼ŒAlice æŒ‚ 3 ä¸ªå–å•ï¼ˆä»·æ ¼é€’å¢ï¼‰ï¼ŒBob æŒ‚ 1 ä¸ªä¹°å•
// éªŒè¯ï¼š
// 1. äº¤æ˜“æŒ‰ç…§ block.Body æ•°ç»„é¡ºåºæ‰§è¡Œ
// 2. æ’®åˆå¼•æ“æŒ‰ç…§ä»·æ ¼ä¼˜å…ˆåŸåˆ™åŒ¹é…ï¼ˆæœ€ä½ä»·ä¼˜å…ˆï¼‰
// 3. æ‰§è¡Œç»“æœæ˜¯ç¡®å®šæ€§çš„ï¼Œå¤šæ¬¡æ‰§è¡Œç»“æœä¸€è‡´
func TestE2E_TransactionOrderDeterminism(t *testing.T) {
	// åˆå§‹åŒ–æ•°æ®åº“
	tmpDir := t.TempDir()
	t.Logf("ğŸ“ Test database directory: %s", tmpDir)

	dbMgr, err := db.NewManager(tmpDir, logs.NewNodeLogger("test", 0))
	require.NoError(t, err)
	defer dbMgr.Close()

	dbMgr.InitWriteQueue(100, 200*time.Millisecond)

	// åˆå§‹åŒ– VM
	registry := vm.NewHandlerRegistry()
	require.NoError(t, vm.RegisterDefaultHandlers(registry))
	cache := vm.NewSpecExecLRU(100)
	executor := vm.NewExecutor(dbMgr, registry, cache)

	// åˆ›å»ºæµ‹è¯•è´¦æˆ·
	aliceAddr := "alice_order_test"
	bobAddr := "bob_order_test"

	createE2ETestAccount(t, dbMgr, aliceAddr, map[string]string{
		"BTC":  "10.0",
		"USDT": "0",
	})
	createE2ETestAccount(t, dbMgr, bobAddr, map[string]string{
		"BTC":  "0",
		"USDT": "200000",
	})

	require.NoError(t, dbMgr.ForceFlush())
	time.Sleep(100 * time.Millisecond)
	t.Log("âœ… Test accounts created")

	// ========== åˆ›å»ºåŒ…å«å¤šä¸ªäº¤æ˜“çš„åŒºå— ==========
	// äº¤æ˜“é¡ºåºï¼š
	// 1. Alice å–å• 1: 1 BTC @ 51000 USDT (é«˜ä»·)
	// 2. Alice å–å• 2: 1 BTC @ 49000 USDT (ä½ä»·)
	// 3. Alice å–å• 3: 1 BTC @ 50000 USDT (ä¸­ä»·)
	// 4. Bob ä¹°å•: ä¹° 1.5 BTCï¼Œæ„¿æ„æ”¯ä»˜æœ€é«˜ 51000 USDT/BTC
	//
	// é¢„æœŸæ’®åˆç»“æœï¼š
	// - æ’®åˆå¼•æ“ä¼šæŒ‰ç…§ä»·æ ¼ä¼˜å…ˆåŸåˆ™ï¼Œå…ˆåŒ¹é…æœ€ä½ä»·çš„å–å•
	// - åŒ¹é…é¡ºåºï¼šsell_2 (49000) -> sell_3 (50000) -> sell_1 (51000)
	// - Bob ä¹°å…¥ 1 BTC @ 49000 + 0.5 BTC @ 50000 = 74000 USDT
	block := &pb.Block{
		BlockHash:     "order_test_block",
		PrevBlockHash: "genesis",
		Height:        1,
		Body: []*pb.AnyTx{
			createSellOrder("sell_order_1", aliceAddr, "BTC", "USDT", "51000", "1.0"),
			createSellOrder("sell_order_2", aliceAddr, "BTC", "USDT", "49000", "1.0"),
			createSellOrder("sell_order_3", aliceAddr, "BTC", "USDT", "50000", "1.0"),
			createBuyOrder("buy_order_1", bobAddr, "USDT", "BTC", "51000", "76500"), // 1.5 * 51000
		},
	}

	t.Log("ğŸ“¦ Executing block with 4 transactions (3 sells + 1 buy)")

	// ========== ç¬¬ä¸€æ¬¡æ‰§è¡Œ ==========
	result1, err := executor.PreExecuteBlock(block)
	require.NoError(t, err)
	require.True(t, result1.Valid, "Block should be valid")
	require.Equal(t, 4, len(result1.Receipts), "Should have 4 receipts")

	// æäº¤åŒºå—
	require.NoError(t, executor.CommitFinalizedBlock(block))
	require.NoError(t, dbMgr.ForceFlush())
	time.Sleep(500 * time.Millisecond)
	t.Log("âœ… Block committed")

	// ========== éªŒè¯æ‰§è¡Œç»“æœ ==========
	// Bob åº”è¯¥ä¹°å…¥ 1.5 BTCï¼ŒèŠ±è´¹ 1*49000 + 0.5*50000 = 74000 USDT
	bobAccount := getE2EAccount(t, dbMgr, bobAddr)
	t.Logf("Bob BTC balance: %s (expected: 1.5)", bobAccount.Balances["BTC"].Balance)
	t.Logf("Bob USDT balance: %s (expected: 126000)", bobAccount.Balances["USDT"].Balance)

	assert.Equal(t, "1.5", bobAccount.Balances["BTC"].Balance, "Bob should have 1.5 BTC")
	assert.Equal(t, "126000", bobAccount.Balances["USDT"].Balance, "Bob should have 126000 USDT")

	// Alice åº”è¯¥å–å‡º 1.5 BTCï¼Œè·å¾— 74000 USDT
	aliceAccount := getE2EAccount(t, dbMgr, aliceAddr)
	t.Logf("Alice BTC balance: %s (expected: 8.5)", aliceAccount.Balances["BTC"].Balance)
	t.Logf("Alice USDT balance: %s (expected: 74000)", aliceAccount.Balances["USDT"].Balance)

	assert.Equal(t, "8.5", aliceAccount.Balances["BTC"].Balance, "Alice should have 8.5 BTC")
	assert.Equal(t, "74000", aliceAccount.Balances["USDT"].Balance, "Alice should have 74000 USDT")

	// éªŒè¯è®¢å•çŠ¶æ€
	sell1 := getE2EOrder(t, dbMgr, "sell_order_1")
	assert.Equal(t, "0", sell1.FilledBase, "sell_order_1 should not be filled (highest price)")
	assert.False(t, sell1.IsFilled)

	sell2 := getE2EOrder(t, dbMgr, "sell_order_2")
	assert.Equal(t, "1", sell2.FilledBase, "sell_order_2 should be fully filled (lowest price)")
	assert.True(t, sell2.IsFilled)

	sell3 := getE2EOrder(t, dbMgr, "sell_order_3")
	assert.Equal(t, "0.5", sell3.FilledBase, "sell_order_3 should be partially filled (middle price)")
	assert.False(t, sell3.IsFilled)

	buyOrder := getE2EOrder(t, dbMgr, "buy_order_1")
	assert.Equal(t, "1.5", buyOrder.FilledQuote, "buy_order_1 should have bought 1.5 BTC")
	assert.True(t, buyOrder.IsFilled)

	t.Log("âœ… Transaction order determinism test passed")
	t.Log("âœ… Matching engine correctly prioritizes by price (lowest first)")
}

// TestE2E_SameAccountMultipleBalanceChanges
// æµ‹è¯•åŒä¸€åŒºå—ä¸­å¯¹åŒä¸€è´¦æˆ·çš„å¤šæ¬¡ä½™é¢ä¿®æ”¹
//
// åœºæ™¯ï¼š
// åœ¨åŒä¸€ä¸ªåŒºå—ä¸­ï¼ŒAlice è¿›è¡Œå¤šæ¬¡è½¬è´¦æ“ä½œ
// éªŒè¯ï¼š
// 1. åŒä¸€è´¦æˆ·çš„ä½™é¢ä¿®æ”¹æŒ‰ç…§äº¤æ˜“é¡ºåºç´¯ç§¯
// 2. æœ€ç»ˆä½™é¢æ­£ç¡®åæ˜ æ‰€æœ‰äº¤æ˜“çš„ç´¯ç§¯æ•ˆæœ
// 3. æ•°æ®ä¸€è‡´æ€§ï¼šStateDB å’Œ Badger æ•°æ®ä¸€è‡´
func TestE2E_SameAccountMultipleBalanceChanges(t *testing.T) {
	// åˆå§‹åŒ–æ•°æ®åº“
	tmpDir := t.TempDir()
	t.Logf("ğŸ“ Test database directory: %s", tmpDir)

	dbMgr, err := db.NewManager(tmpDir, logs.NewNodeLogger("test", 0))
	require.NoError(t, err)
	defer dbMgr.Close()

	dbMgr.InitWriteQueue(100, 200*time.Millisecond)

	// åˆå§‹åŒ– VM
	registry := vm.NewHandlerRegistry()
	require.NoError(t, vm.RegisterDefaultHandlers(registry))
	cache := vm.NewSpecExecLRU(100)
	executor := vm.NewExecutor(dbMgr, registry, cache)

	// åˆ›å»ºæµ‹è¯•è´¦æˆ·
	aliceAddr := "alice_multi_change"
	bobAddr := "bob_multi_change"
	charlieAddr := "charlie_multi_change"

	// Alice åˆå§‹æœ‰ 10000 USDT
	createE2ETestAccount(t, dbMgr, aliceAddr, map[string]string{
		"USDT": "10000",
	})
	createE2ETestAccount(t, dbMgr, bobAddr, map[string]string{
		"USDT": "0",
	})
	createE2ETestAccount(t, dbMgr, charlieAddr, map[string]string{
		"USDT": "0",
	})

	require.NoError(t, dbMgr.ForceFlush())
	time.Sleep(100 * time.Millisecond)
	t.Log("âœ… Test accounts created")

	// ========== åˆ›å»ºåŒ…å«å¤šä¸ªè½¬è´¦çš„åŒºå— ==========
	// åŒä¸€åŒºå—ä¸­ï¼ŒAlice è¿›è¡Œ 5 æ¬¡è½¬è´¦ï¼š
	// 1. Alice -> Bob: 1000 USDT (Alice: 10000 - 1000 = 9000)
	// 2. Alice -> Charlie: 2000 USDT (Alice: 9000 - 2000 = 7000)
	// 3. Alice -> Bob: 1500 USDT (Alice: 7000 - 1500 = 5500)
	// 4. Alice -> Charlie: 500 USDT (Alice: 5500 - 500 = 5000)
	// 5. Alice -> Bob: 3000 USDT (Alice: 5000 - 3000 = 2000)
	//
	// é¢„æœŸæœ€ç»ˆä½™é¢ï¼š
	// - Alice: 2000 USDT
	// - Bob: 1000 + 1500 + 3000 = 5500 USDT
	// - Charlie: 2000 + 500 = 2500 USDT
	block := &pb.Block{
		BlockHash:     "multi_change_block",
		PrevBlockHash: "genesis",
		Height:        1,
		Body: []*pb.AnyTx{
			createTransferTx("tx_1", aliceAddr, bobAddr, "USDT", "1000"),
			createTransferTx("tx_2", aliceAddr, charlieAddr, "USDT", "2000"),
			createTransferTx("tx_3", aliceAddr, bobAddr, "USDT", "1500"),
			createTransferTx("tx_4", aliceAddr, charlieAddr, "USDT", "500"),
			createTransferTx("tx_5", aliceAddr, bobAddr, "USDT", "3000"),
		},
	}

	t.Log("ğŸ“¦ Executing block with 5 transfers from Alice")

	// æ‰§è¡ŒåŒºå—
	result, err := executor.PreExecuteBlock(block)
	require.NoError(t, err)
	require.True(t, result.Valid, "Block should be valid")
	require.Equal(t, 5, len(result.Receipts), "Should have 5 receipts")

	// éªŒè¯æ‰€æœ‰äº¤æ˜“éƒ½æˆåŠŸ
	for i, receipt := range result.Receipts {
		assert.Equal(t, "SUCCEED", receipt.Status, "Transaction %d should succeed", i+1)
	}

	// æäº¤åŒºå—
	require.NoError(t, executor.CommitFinalizedBlock(block))
	require.NoError(t, dbMgr.ForceFlush())
	time.Sleep(500 * time.Millisecond)
	t.Log("âœ… Block committed")

	// ========== éªŒè¯æœ€ç»ˆä½™é¢ ==========
	aliceAccount := getE2EAccount(t, dbMgr, aliceAddr)
	bobAccount := getE2EAccount(t, dbMgr, bobAddr)
	charlieAccount := getE2EAccount(t, dbMgr, charlieAddr)

	t.Logf("Alice USDT balance: %s (expected: 2000)", aliceAccount.Balances["USDT"].Balance)
	t.Logf("Bob USDT balance: %s (expected: 5500)", bobAccount.Balances["USDT"].Balance)
	t.Logf("Charlie USDT balance: %s (expected: 2500)", charlieAccount.Balances["USDT"].Balance)

	assert.Equal(t, "2000", aliceAccount.Balances["USDT"].Balance, "Alice should have 2000 USDT")
	assert.Equal(t, "5500", bobAccount.Balances["USDT"].Balance, "Bob should have 5500 USDT")
	assert.Equal(t, "2500", charlieAccount.Balances["USDT"].Balance, "Charlie should have 2500 USDT")

	// éªŒè¯æ€»é‡å®ˆæ’
	// åˆå§‹æ€»é‡ï¼š10000 (Alice)
	// æœ€ç»ˆæ€»é‡ï¼š2000 (Alice) + 5500 (Bob) + 2500 (Charlie) = 10000 âœ…
	t.Log("âœ… Balance conservation verified: 2000 + 5500 + 2500 = 10000")

	// ========== éªŒè¯æ•°æ®æŒä¹…åŒ– ==========
	// é‡æ–°è¯»å–è´¦æˆ·ï¼ŒéªŒè¯æ•°æ®å·²æ­£ç¡®æŒä¹…åŒ–
	aliceFromDB := getE2EAccount(t, dbMgr, aliceAddr)
	bobFromDB := getE2EAccount(t, dbMgr, bobAddr)
	charlieFromDB := getE2EAccount(t, dbMgr, charlieAddr)

	assert.Equal(t, "2000", aliceFromDB.Balances["USDT"].Balance, "DB should have correct Alice balance")
	assert.Equal(t, "5500", bobFromDB.Balances["USDT"].Balance, "DB should have correct Bob balance")
	assert.Equal(t, "2500", charlieFromDB.Balances["USDT"].Balance, "DB should have correct Charlie balance")

	t.Log("âœ… Data persistence verified")
	t.Log("âœ… Same account multiple balance changes test passed")
}

// createTransferTx åˆ›å»ºè½¬è´¦äº¤æ˜“ï¼ˆè¾…åŠ©å‡½æ•°ï¼‰
func createTransferTx(txID, from, to, token, amount string) *pb.AnyTx {
	return &pb.AnyTx{
		Content: &pb.AnyTx_Transaction{
			Transaction: &pb.Transaction{
				Base: &pb.BaseMessage{
					TxId:        txID,
					FromAddress: from,
					Status:      pb.Status_PENDING,
				},
				TokenAddress: token,
				Amount:       amount,
			},
		},
	}
}
